Fix package json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "unity": "2021.3",
     "description": "A collection of extensions, scripts, and objects useful for C# and Unity projects.",
     "author": [
-        "name": Pete Mainardi",
-		"url": "https://github.com/petemainardi/MainArtery-Utilities"
+        "name": "Pete Mainardi",
+		"url": ""
     ]
 }
