Rename runtime assembly
Having 'Runtime' in the name is redundant

--- a/Runtime/MainArtery.Utilities.asmdef
+++ b/Runtime/MainArtery.Utilities.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MainArtery.Utilities.Runtime",
+    "name": "MainArtery.Utilities",
     "rootNamespace": "MainArtery.Utilities",
     "references": [],
     "includePlatforms": [],
