--- a/Editor/MainArtery.Utilities.Unity.Editor.asmdef
+++ b/Editor/MainArtery.Utilities.Unity.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:78714536ed0d0944e87e1c91bccf0f2e"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
